# school-task-passive

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: base_on_ip.rs  base_on_name.rs  base_on_user_name.rs  base_on_user_name.txt  base_on_username.rs  main.rs
