[package]
name = "Passive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version ="0.11", features = ["blocking", "json"]}
regex = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
structopt = "0.3"
scraper = "0.12"
tokio = { version = "1", features = ["full"] }
config = "0.14.0"
select = "0.5"